add user's project enumeration endpoint
